# OpencvFaceDetectWasm

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cpp/: main.cpp
web/: index.html
